--- a/tedx/package.json
+++ b/tedx/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "tedx-app",
+  "name": "tedx",
   "version": "1.0.0",
-  "description": "TEDx DYP Akurdi React/Parcel/Tailwind project",
+  "main": "postcss.config.js",
   "scripts": {
-    "start": "parcel index.html"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "@studio-freight/lenis": "^1.0.42",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.7.1"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
-    "autoprefixer": "^10.4.21",
-    "parcel": "^2.15.4",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11"
+    "express": "^5.1.0",
+    "googleapis": "^157.0.0",
+    "mongoose": "^8.18.0",
+    "nodemailer": "^7.0.5",
+    "pdfkit": "^0.17.1",
+    "qrcode": "^1.5.4",
+    "razorpay": "^2.9.6"
   }
 }
